# a-data-pro-internship-2022

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SECURITY.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: azure-webapps-python.yml  greetings.yml  stale.yml
crawlers/: admin.py  apps.py  models.py
crawlers/migrations/: 0001_initial.py
main/: urls.py  views.py
main/static/main/style/: news.css  style.css
main/templates/: base.html  footer.html  navbar.html
main/templates/main/: index.html
news/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_news_site.py  0003_alter_news_options_alter_newsimage_options_and_more.py  0004_entity.py
news/static/style/: news.css
news/templates/news/: news_detail.html  news_list.html
scripts/: postdep.sh
textquery/: asgi.py  settings.py  urls.py  wsgi.py
textquerycrawlers/: scrapy.cfg
textquerycrawlers/textquerycrawlers/: items.py  middlewares.py  pipelines.py  settings.py  startCrawling.py  startCrawlingSpecific.py
textquerycrawlers/textquerycrawlers/spiders/: getLatestNews.py  getSpecificNews.py
