[tool.poetry]
name = "textquery"
version = "0.1.0"
description = ""
authors = ["Stoyan Ivanov <ssivanov19@codingburgas.bg>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.5"
Scrapy = "^2.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
