[tool.poetry]
name = "textquery"
version = "0.1.0"
description = ""
authors = ["Stoyan Ivanov <ssivanov19@codingburgas.bg>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.10"
Scrapy = "^2.6.1"
pre-commit = "^2.19.0"
python-dotenv = "^0.20.0"
psycopg2 = "^2.9.3"
spacy = "^3.3.1"
python-logging-loki = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
